demo/uebung-17/tag-my-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: adrian
  labels:
    "owner": "adrian"
