demo/uebung-17/allow-ui-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ui-access
  namespace: adrian
spec:
  podSelector:
    matchLabels:
      application: kino
      service: ui
  ingress:
    - ports:
        - port: 8081
          protocol: TCP
      from:
        - ipBlock:
            cidr: 0.0.0.0
