demo/uebung-17/default-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: Default-Deny-All
  namespace: adrian
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              owner: adrian
  policyTypes:
  - Ingress
